--- a/stylesheets/all.scss
+++ b/stylesheets/all.scss
@@ -1,4 +1,3 @@
-//@import "../node_modules/bootstrap/scss/bootstrap";
 
 // Required
 @import "../node_modules/bootstrap/scss/functions";
@@ -44,6 +43,6 @@
 
 @import "helper/components/size";
 @import "helper/components/layout";
-@import "helper/components/index";
+@import "helper/components/mp";
 
 
