--- a/stylesheets/helper/components/_mp.scss
+++ b/stylesheets/helper/components/_mp.scss
@@ -137,3 +137,12 @@
       background-color: $warning !important;
     }
 }
+.nav{
+    .border-right{
+        border-right: 1px solid #e5b0ae !important;
+}
+    }
+
+.news-title{
+    letter-spacing: 0.1rem;
+}
