fixed_html_form_tag

--- a/stylesheets/all.css
+++ b/stylesheets/all.css
@@ -11214,7 +11214,7 @@ thead .bg-light {
   }
 }
 
-.check-td-btn a {
+.check-td-btn button {
   width: 120px;
   margin-bottom: 0.5rem;
   margin-right: 0.25rem;
