--- a/stylesheets/helper/components/_layout.scss
+++ b/stylesheets/helper/components/_layout.scss
@@ -1,446 +1,451 @@
 body {
-	font-family: Lato, "PingFang TC", "Helvetica Neue", Helvetica, 微軟正黑體,
-		新細明體, Arial, sans-serif;
+  font-family: Lato, "PingFang TC", "Helvetica Neue", Helvetica, 微軟正黑體,
+    新細明體, Arial, sans-serif;
 
-	a {
-		text-decoration: none !important;
-		cursor: pointer;
-	}
+  a {
+    text-decoration: none !important;
+    cursor: pointer;
+  }
 }
 
 .word-link {
-	a {
-		color: #1a51a5;
-		text-decoration: underline !important;
-	}
+  a {
+    color: #1a51a5;
+    text-decoration: underline !important;
+  }
 }
 
 thead {
-	.bg-light {
-		background-color: #ececec !important;
-	}
+  .bg-light {
+    background-color: #ececec !important;
+  }
 }
 
 .col-form-label {
-	padding-top: 0;
+  padding-top: 0;
 }
 
 .list-btn {
-	border-radius: 0.25rem;
-	width: 120px;
-	margin: 0 0.5rem;
+  border-radius: 0.25rem;
+  width: 7.5em;
+  margin: 0 0.5rem;
 }
 
 .count-btn {
-	width: 32px;
+  width: 2em;
 }
 
 .table-btn {
-	margin-bottom: 0.25rem;
-	width: 60px;
+  margin-bottom: 0.25rem;
+  width: 3.75em;
 }
 
 .list-btn-group {
-	.btn {
-		margin-bottom: 0.5rem;
-	}
+  .btn {
+    margin-bottom: 0.5rem;
+  }
 }
 
 .nav-tag-btn {
-	font-weight: bold;
-	letter-spacing: 0.1rem;
-	font-size: 1.1rem;
+  font-weight: bold;
+  letter-spacing: 0.1rem;
+  font-size: 1.1rem;
 
-	li {
-		margin: 0.5rem;
-		background-color: $light;
-	}
+  li {
+    margin: 0.5rem;
+    background-color: $light;
+  }
 
-	.active {
-		color: $primary !important;
-		border-radius: 0 !important;
-		border-bottom: 3px solid $primary;
-		background-color: $secondary !important;
-	}
+  .active {
+    color: $primary !important;
+    border-radius: 0 !important;
+    border-bottom: 0.188em solid $primary;
+    background-color: $secondary !important;
+  }
 }
 
 .card-header {
-	font-size: 1.2rem;
+  font-size: 1.2rem;
 }
 
 .footer-text {
-	font-size: 0.8rem;
+  font-size: 0.8rem;
 }
 
 .footer-bg {
-	line-height: 2rem;
+  line-height: 2rem;
 }
 
 .table-title,
 .form-title {
-	font-weight: bold;
-	color: $primary;
-	letter-spacing: 0.02rem;
-	line-height: 1.5;
+  font-weight: bold;
+  color: $primary;
+  letter-spacing: 0.02rem;
+  line-height: 1.5;
 
-	@include Small-size {
-		padding-bottom: calc(0.375rem + 1px);
-	}
+  @include Small-size {
+    padding-bottom: calc(0.375rem + 0.063em);
+  }
 }
 
 .primary-nav {
-	display: flex;
+  display: flex;
 }
 
 .primary-navbar-nav {
-	display: flex;
-	align-items: center;
+  display: flex;
+  align-items: center;
 
-	li {
-		width: 16%;
-		font-weight: bold;
-		text-align: center;
-		padding: 0.3rem 0;
+  li {
+    width: 16%;
+    font-weight: bold;
+    text-align: center;
+    padding: 0.3rem 0;
 
-		@include Large-size {
-			width: 100%;
-			font-size: 0.9rem;
-		}
-	}
+    @include Large-size {
+      width: 100%;
+      font-size: 0.9rem;
+    }
+  }
 }
 
 .dropdown-menu {
-	padding: 0;
-	margin: 0;
+  padding: 0;
+  margin: 0;
 }
 
 .page-link {
-	border: 0;
+  border: 0;
 
-	&:hover {
-		background-color: $light-ivory;
-	}
+  &:hover {
+    background-color: $light-ivory;
+  }
 }
 
 .dropdown-item {
-	&:hover {
-		background-color: $primary;
-		color: #fff;
-	}
+  &:hover {
+    background-color: $primary;
+    color: #fff;
+  }
 }
 
 .login-tag {
-	a {
-		font-weight: bold;
-		letter-spacing: 0.05rem;
-	}
+  a {
+    font-weight: bold;
+    letter-spacing: 0.05rem;
+  }
 }
 
 .login-status {
-	span {
-		font-size: 0.86rem;
-		font-weight: 500;
-		letter-spacing: 0.01rem;
-	}
+  span {
+    font-size: 0.86rem;
+    font-weight: 500;
+    letter-spacing: 0.01rem;
+  }
 
-	@include Medium-size {
-		padding-top: 0.5rem;
-		padding-bottom: 0.5rem;
-	}
+  @include Medium-size {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+  }
 
-	.span-block {
-		@media (max-width: 487px) {
-			display: block;
-		}
-	}
+  .span-block {
+    @media (max-width: 46.75em) {
+      display: block;
+    }
+  }
 }
 
 .nav-logo {
-	font-size: 1.5rem;
-	font-weight: bold;
-	padding-top: 3%;
-	padding-bottom: 3%;
+  font-size: 1.5rem;
+  font-weight: bold;
+  padding-top: 3%;
+  padding-bottom: 3%;
 
-	@include Large-size {
-		font-size: 1.3rem;
-	}
+  @include Large-size {
+    font-size: 1.3rem;
+  }
 
-	@include Exsmall-size {
-		font-size: 1.2rem;
-	}
+  @include Exsmall-size {
+    font-size: 1.2rem;
+  }
 }
 
 .news-list {
-	span {
-		text-align: end;
-	}
+  span {
+    text-align: end;
+  }
 }
 
 .header-bg {
-	background-image: url(../img/Visionimg-sm.svg);
-	background-repeat: no-repeat;
-	background-size: auto 200px;
-	background-position-y: top;
-	background-position: right;
-	position: relative;
+  background-image: url(../img/Visionimg-sm.svg);
+  background-repeat: no-repeat;
+  background-size: auto 12.5em;
+  background-position-y: top;
+  background-position: right;
+  position: relative;
 
-	@include Extra-large {
-		background-size: auto 160px;
-	}
+  @include Extra-large {
+    background-size: auto 10em;
+  }
 
-	img {
-		width: 10%;
-		margin-right: 1%;
+  img {
+    width: 10%;
+    margin-right: 1%;
 
-		@include Large-size {
-			width: 12%;
-			margin-right: 2%;
-		}
-	}
+    @include Large-size {
+      width: 12%;
+      margin-right: 2%;
+    }
+  }
 
-	&::after {
-		content: "";
-		display: flex;
-		height: 58px;
-		position: absolute;
-		width: 100%;
-		background-color: $warning;
-		z-index: -1;
-		left: 0;
-		bottom: 0;
-	}
+  &::after {
+    content: "";
+    display: flex;
+    height: 3.625em;
+    position: absolute;
+    width: 100%;
+    background-color: $warning;
+    z-index: -1;
+    left: 0;
+    bottom: 0;
+  }
 
-	@include Large-size {
-		display: none;
-	}
+  @include Large-size {
+    display: none;
+  }
 }
 
 .phone-title {
-	display: none;
-	text-align: center;
-	width: 80%;
-	justify-content: center;
+  display: none;
+  text-align: center;
+  width: 80%;
+  justify-content: center;
 
-	img {
-		height: 50px;
-		margin-right: 1%;
-		margin-top: 2%;
+  img {
+    height: 3.125em;
+    margin-right: 1%;
+    margin-top: 2%;
 
-		@include Large-size {
-			height: 40px;
-		}
+    @include Large-size {
+      height: 2.5em;
+    }
 
-		@include Medium-size {
-			height: 40px;
-		}
+    @include Medium-size {
+      height: 2.5em;
+    }
 
-		@include Small-size {
-			height: 30px;
-			margin-top: 3%;
-		}
+    @include Small-size {
+      height: 1.875em;
+      margin-top: 3%;
+    }
 
-		@include Exsmall-size {
-			height: 25px;
-			margin-right: 2%;
-		}
-	}
+    @include Exsmall-size {
+      height: 1.563em;
+      margin-right: 2%;
+    }
+  }
 
-	@include Large-size {
-		display: flex;
-	}
+  @include Large-size {
+    display: flex;
+  }
 
-	@include Small-size {
-		width: 75%;
-	}
+  @include Small-size {
+    width: 75%;
+  }
 }
 
 .phone-login {
-	display: none;
+  display: none;
 
-	@include Large-size {
-		display: block;
-	}
-
+  @include Large-size {
+    display: block;
+  }
 }
 
 .title {
-	font-size: 1.5rem;
-	font-weight: bold;
-	letter-spacing: 0.1rem;
-	text-align: center;
+  font-size: 1.5rem;
+  font-weight: bold;
+  letter-spacing: 0.1rem;
+  text-align: center;
 }
 
 .thead-style {
-	border-bottom: 3px solid $primary !important;
+  border-bottom: 0.188em solid $primary !important;
 
-	th {
-		white-space: nowrap;
-	}
+  th {
+    white-space: nowrap;
+  }
 }
 
 .page-text {
-	text-align: center;
-	letter-spacing: 0.2rem;
+  text-align: center;
+  letter-spacing: 0.2rem;
 }
 
 .page-btn {
-	@include Small-size {
-		display: none;
-	}
+  @include Small-size {
+    display: none;
+  }
 }
 
 .card-table {
-	padding: 2.5rem;
-	padding-top: 1rem;
+  padding: 2.5rem;
+  padding-top: 1rem;
 }
 
 .table-style {
-	width: 100%;
+  width: 100%;
 
-	tbody {
-		padding: 1.5rem !important;
-	}
+  tbody {
+    padding: 1.5rem !important;
+  }
 
-	th {
-		padding-right: 15px;
-		padding-left: 15px;
-	}
+  th {
+    padding-right: 0.938em;
+    padding-left: 0.938em;
+  }
 
-	th,
-	td {
-		border-bottom: 1px #dee2e6 solid;
-	}
+  th,
+  td {
+    border-bottom: 0.063em #dee2e6 solid;
+  }
+}
+
+.file-upload-input {
+  input {
+    margin-bottom: 1rem;
+  }
 }
 
 .form-style {
-	input {
-		margin-bottom: 1rem;
-	}
+  // input {
+  // 	margin-bottom: 1rem;
+  // }
 
-	.form-border {
-		border-bottom: 1px #dee2e6 solid;
-	}
+  .form-border {
+    border-bottom: 0.063em #dee2e6 solid;
+  }
 
-	.signin-box-border {
-		border-bottom: 1px #fff solid;
-	}
+  .signin-box-border {
+    border-bottom: 0.063em #fff solid;
+  }
 }
 
 .signin-card {
-	border: 10px solid #fff;
+  border: 0.625em solid #fff;
 }
 
 .alert-bg {
-	background-color: $light-ivory;
-	padding: 1rem;
-	margin-bottom: 1rem;
-	font-size: 0.9rem;
-	letter-spacing: 0.05rem;
+  background-color: $light-ivory;
+  padding: 1rem;
+  margin-bottom: 1rem;
+  font-size: 0.9rem;
+  letter-spacing: 0.05rem;
 }
 
 .search-form {
-	display: flex;
-	justify-content: center;
+  display: flex;
+  justify-content: center;
 
-	label {
-		margin-top: 0.5rem;
-		width: 100px;
-		text-align: right;
-		margin-right: 0.5rem;
+  label {
+    margin-top: 0.5rem;
+    width: 6.25em;
+    text-align: right;
+    margin-right: 0.5rem;
 
-		@include Large-size {
-			text-align: left;
-		}
-	}
+    @include Large-size {
+      text-align: left;
+    }
+  }
 
-	.input-style {
-		width: 100%;
+  .input-style {
+    width: 100%;
 
-		.date-form-control {
-			width: 50%;
-		}
+    .date-form-control {
+      width: 50%;
+    }
 
-		@include Large-size {
-			.date-form-control {
-				width: calc(50% - 10px);
-			}
-		}
-	}
+    @include Large-size {
+      .date-form-control {
+        width: calc(50% - 0.625em);
+      }
+    }
+  }
 }
 
 .search-form-btn {
-	@include Large-size {
-		display: flex;
-		justify-content: center;
-		height: 36px;
-	}
+  @include Large-size {
+    display: flex;
+    justify-content: center;
+    height: 2.25em;
+  }
 
-	@include Medium-size {
-		height: auto;
-		margin: auto;
-	}
+  @include Medium-size {
+    height: auto;
+    margin: auto;
+  }
 }
 
 .check-td-btn {
-	button {
-		width: 120px;
-		margin-bottom: 0.5rem;
-		margin-right: 0.25rem;
-	}
+  button {
+    width: 7.5em;
+    margin-bottom: 0.5rem;
+    margin-right: 0.25rem;
+  }
 }
 
 .td-list-item {
-	display: flex;
-	justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 
-	@include Extra-large {
-		padding-top: 0.25rem;
-		padding-bottom: 0.25rem;
-	}
+  @include Extra-large {
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
+  }
 }
 
 .modal-content,
 .modal-footer {
-	border: 0;
+  border: 0;
 }
 
 .modal-title {
-	font-size: 1.2rem;
-	letter-spacing: 0.01rem;
+  font-size: 1.2rem;
+  letter-spacing: 0.01rem;
 }
 
 .text-gray {
-	color: $gray-600;
+  color: $gray-600;
 }
 
 .new-application-bg {
-	background-color: #966949 !important;
+  background-color: #966949 !important;
 }
 
 .change-application-bg {
-	background-color: #6d435a !important;
+  background-color: #6d435a !important;
 }
 
 .disagree-application-bg {
-	background-color: #706253 !important;
+  background-color: #706253 !important;
 }
 
 .agree-application-bg {
-	background-color: #354b55 !important;
+  background-color: #354b55 !important;
 }
 
 .new-application-border {
-	border-bottom: 3px solid #966949 !important;
+  border-bottom: 0.188em solid #966949 !important;
 }
 
 .change-application-border {
-	border-bottom: 3px solid #6d435a !important;
+  border-bottom: 0.188em solid #6d435a !important;
 }
 
 .disagree-application-border {
-	border-bottom: 3px solid #706253 !important;
+  border-bottom: 0.188em solid #706253 !important;
 }
 
 .agree-application-border {
-	border-bottom: 3px solid #354b55 !important;
+  border-bottom: 0.188em solid #354b55 !important;
 }
