--- a/stylesheets/helper/components/_mp.scss
+++ b/stylesheets/helper/components/_mp.scss
@@ -1,148 +1,179 @@
-.index-search{
-    .search-title{
-        letter-spacing:.08rem;
+.index-search {
+    .search-title {
+        letter-spacing: .08rem;
         font-size: 1.5rem;
-        @include Small-size{
-            letter-spacing:0;
+
+        @include Small-size {
+            letter-spacing: 0;
             font-size: 1.1rem;
             font-weight: bold;
         }
 
     }
-    .input-group{
+
+    .input-group {
         width: 25%;
+
         @include Large-size {
             width: 30%;
         }
+
         @include Medium-size {
             width: 40%;
         }
+
         @include Small-size {
             width: 100%;
         }
     }
-   
+
 }
-.index-header{
-      &::after{
+
+.index-header {
+    &::after {
         content: '';
         position: absolute;
-        height: 180px;
-        margin-top:-180px;
+        height: 11.250em;
+        margin-top: -11.250em;
         z-index: -100;
         width: 100%;
-        background-color:$ivory;
-        @include Medium-size{
-            height: 210px;
-            margin-top: -210px;
+        background-color: $ivory;
+
+        @include Medium-size {
+            height: 13.125em;
+            margin-top: -13.125em;
         }
-        @include Small-size{
-            height: 120px;
-            margin-top:-120px; 
+
+        @include Small-size {
+            height: 7.5em;
+            margin-top: -7.5em;
         }
-        @include Exsmall-size{
-            height: 140px;
-            margin-top:-140px; 
+
+        @include Exsmall-size {
+            height: 8.75em;
+            margin-top: -8.75em;
         }
-    }  
-}
-.index-logo{
-    padding-top: 2rem ;
-    @include Medium-size{
-       padding-top: 0 ;
-       img{
-           width: 40%;
-       } 
     }
 }
-.index-bg{
+
+.index-logo {
+    padding-top: 2rem;
+
+    @include Medium-size {
+        padding-top: 0;
+
+        img {
+            width: 40%;
+        }
+    }
+}
+
+.index-bg {
     background: url(../img/Visionimg.svg) no-repeat right bottom;
     background-size: 58%;
-    height: 460px;
+    height: 28.750em;
     margin-bottom: 3rem;
-    @include Small-size{
-        height: 280px;
+
+    @include Small-size {
+        height: 17.5em;
         margin-bottom: 1rem;
     }
-    @include Exsmall-size{
-        height: 260px;
+
+    @include Exsmall-size {
+        height: 16.25em;
     }
 }
-.index-title{
-    span{
+
+.index-title {
+    span {
         display: block;
-        @include Exsmall-size{
+
+        @include Exsmall-size {
             display: inline-block;
         }
     }
+
     font-weight: 700;
     line-height: 1.55em;
     font-size: 2.6rem;
-    @include Small-size{
-        font-size:1.6rem;
+
+    @include Small-size {
+        font-size: 1.6rem;
     }
-    @include Small-size{
-        font-size:1.3rem;
+
+    @include Small-size {
+        font-size: 1.3rem;
     }
 }
-.index-nav{
-    &::before{
+
+.index-nav {
+    &::before {
         content: '';
         position: absolute;
-        height: 20px;
+        height: 1.25em;
         width: 100%;
-        background-color:$light-brown;
+        background-color: $light-brown;
         z-index: -1;
     }
 }
-.index-application-icon{
+
+.index-application-icon {
     width: 30%;
-    @include Large-size{
+
+    @include Large-size {
         width: 20%;
     }
 }
-.index-application-btn{
-    border: 4px solid #fff;
+
+.index-application-btn {
+    border: 0.25em solid #fff;
     padding: 1.5rem 1rem !important;
     width: 100%;
-    
+
 }
-.index-login-btn{
+
+.index-login-btn {
     width: 100%;
     padding: 1rem !important;
-    border: 4px solid #fff;
-    &:hover{
+    border: 0.25em solid #fff;
+
+    &:hover {
         color: #fff !important;
     }
-    @include Large-size{
-       margin-top: 2rem;
+
+    @include Large-size {
+        margin-top: 2rem;
     }
 }
-.index-btn-text{
+
+.index-btn-text {
     font-size: 1.1rem;
     font-weight: bold;
 }
-.index-content{
+
+.index-content {
     padding-bottom: 5%;
     background: url(../img/bg-img.png) right bottom no-repeat $ivory;
     background-size: 55%;
 }
 
-.index-list-bg{
-    background-color: #fff;  
-    padding:1rem;
+.index-list-bg {
+    background-color: #fff;
+    padding: 1rem;
 }
-.nav-tag-btn{
-    .active{
-      background-color: $warning !important;
-    }
-}
-.nav{
-    .border-right{
-        border-right: 1px solid #e5b0ae !important;
-}
-    }
 
-.news-title{
+.nav-tag-btn {
+    .active {
+        background-color: $warning !important;
+    }
+}
+
+.nav {
+    .border-right {
+        border-right: 0.063em solid #e5b0ae !important;
+    }
+}
+
+.news-title {
     letter-spacing: 0.1rem;
 }
